--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "watchpack": "1.6.1"
   },
   "dependencies": {
-    "bootstrap": "^4.5.0"
+    "bootstrap": "^4.5.0",
+    "roboto-fontface": "^0.10.0"
   }
 }
