--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "docs:build": "vuepress build docs"
   },
   "devDependencies": {
+    "@vuepress/plugin-pwa": "^1.5.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
     "vuepress": "^1.5.0"
